--- a/wiki/SystemRequirements.wiki
+++ b/wiki/SystemRequirements.wiki
@@ -4,9 +4,10 @@
  * Windows 7
 with Internet Explorer 6, 7, or 8 installed
 
+
 *Minimum Hardware*
  * 800 MHz Pentium III or Athlon
  * 256 MB RAM 
  * 25 MB hard drive space
 
-An internet connection is required to play diaporamas that donwload content from a web site.
+Note: An internet connection is required to play diaporamas that donwload content from a web site.
