--- a/wiki/SystemRequirements.wiki
+++ b/wiki/SystemRequirements.wiki
@@ -10,4 +10,4 @@ with Internet Explorer 6, 7, or 8 installed
  * 256 MB RAM 
  * 25 MB hard drive space
 
-Note: An internet connection is required to play diaporamas that donwload content from a web site.
+Note: an internet connection is required to play diaporamas that donwload content from a web site.
