--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,3 +1,3 @@
- * [Screenshots screenshots]
- * [SystemRequirements system requirements]
- * [Installation installation]
+ * [Screenshots Screenshots]
+ * [SystemRequirements system Requirements]
+ * [Installation Installation]
