Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,3 +1,3 @@
  * [Screenshots Screenshots]
- * [SystemRequirements System Requirements]
+ * [SystemRequirements System requirements]
  * [Installation Installation]
