Edited wiki page Installation through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,3 +1,5 @@
+#summary How to install DiaporamaCenter
+
 There is no setup file yet, but the installation is quite easy.
 
  # Extract the DiaporamaCenter 7z archive into the folder of your choice
