Edited wiki page SystemRequirements through web user interface.

--- a/wiki/SystemRequirements.wiki
+++ b/wiki/SystemRequirements.wiki
@@ -1,4 +1,4 @@
-#summary What you need to install DiaporamCenter
+#summary What you need to install DiaporamaCenter
 
 *Operating System*
  * Windows XP SP2
