--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -1,5 +1,9 @@
 *Devices*
 
+<a href="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Devices.png">
+<img width=240 height=320 src="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Devices.png"/>
+</a>
+
 <img width=240 height=320 src="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Devices.png" />
 
 *Diaporamas*
