--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -3,7 +3,7 @@
 <tr>
 
 <td>
-<p><bold>Devices</bold></p>
+<p><b>Devices</b></p>
 <a href="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Devices.png">
 <img width=240 height=320 src="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Devices.png"/>
 </a>
