--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -2,4 +2,5 @@
 
 Simply run the setup file, and follow the instructions.
 
-Note: the DiaporamaCenter setup will also install the MSXML 4.0 SP3 library.  The installation of this library needs the system to be restarted. 
+Note: the DiaporamaCenter setup will also install the MSXML 4.0 SP3 library.  
+The installation of this library needs the system to be restarted. 
