Edited wiki page DevelopmentGuide through web user interface.

--- a/wiki/DevelopmentGuide.wiki
+++ b/wiki/DevelopmentGuide.wiki
@@ -1,1 +1,4 @@
-In construction
+DiaporamaCenter is a Win32 application developed with Embarcardero Delphi 2009.
+
+This application uses the [http://sourceforge.net/projects/comport/ ComPort library] to control videoprojectors through a COM port.
+The original source code has been slightly changed to integrate into DiaporamaCenter. The modified source code can be found in the source repository, in the Components sub folder. 
