Edited wiki page Screenshots through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -44,3 +44,23 @@
 </td>
 
 </tr>
+
+<tr>
+
+<td>
+<p><b>FantasticEstateAgency</b>Gingerbread House</p>
+<a href="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/FantasticEstateAgency1.jpg">
+<img width=240 height=320 src="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Settings_Paths.png"/>
+</a>
+</td>
+
+<td>
+<p>Dracula Castle</p>
+<a href="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/FantasticEstateAgency2.jpg">
+<img width=240 height=320 src="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/FantasticEstateAgency2.jpg"/>
+</a>
+</td>
+
+</tr>
+
+</table>
