Edited wiki page Screenshots through web user interface.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -1,7 +1,6 @@
 <table>
 
 <tr>
-
 <td>
 <p><b>Devices</b></p>
 <a href="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Devices.png">
@@ -15,20 +14,18 @@
 <img width=240 height=320 src="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Diaporamas.png"/>
 </a>
 </td>
-
 </tr>
-<tr>
 
+<tr>
 <td>
 <p><b>Schedule</b></p>
 <a href="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Schedule.png">
 <img width=240 height=320 src="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Schedule.png"/>
 </a>
 </td>
-
 </tr>
-<tr>
 
+<tr>
 <td>
 <p><b>Settings</b> (paths)</p>
 <a href="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Settings_Paths.png">
@@ -42,13 +39,11 @@
 <img width=240 height=320 src="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/DiaporamaCenter_Settings_Download.png"/>
 </a>
 </td>
-
 </tr>
 
 <tr>
-
 <td>
-<p><b>FantasticEstateAgency</b>Gingerbread House</p>
+<p><b>FantasticEstateAgency sample</b>Gingerbread House</p>
 <a href="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/FantasticEstateAgencySample1.jpg">
 <img width=320 height=240 src="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/FantasticEstateAgencySample1.jpg"/>
 </a>
@@ -60,7 +55,6 @@
 <img width=320 height=240 src="http://matheric.tomson.free.fr/DiaporamaCenter/Screenshots/FantasticEstateAgencySample2.jpg"/>
 </a>
 </td>
-
 </tr>
 
 </table>
