Edited wiki page Overview through web user interface.

--- a/wiki/Overview.wiki
+++ b/wiki/Overview.wiki
@@ -1,21 +1,21 @@
-= Display devices =
+== Display devices ==
 DiaporaCenter is a multi display application. It manages the displays in an independent way :
 - it is able to play & stop one different slide show on each display
 - it can power on / off each device separately (this feature may depends on the OS)
 
-= Videoprojectors =
+== Videoprojectors ==
 Videoprojectors are special devices, they
 have a limited life of , so they need to be shut down (or put in stand by), when they are not used.
 Most of videoprojectors are controllable by the COM port. DiaporamaCenter is able to control videoprjectors that way. The user has to enter
 
-= Diaporamas =
+== Diaporamas ==
 A diaporama is a set of slides displayed on one device. As they are HTML based, slides can contain any kind of media. Each slide is generated from the a fragment of data contained in the diaporama file, and the slide's template.
 Diaporamas can contain slides of different template.
 
-= Download =
+== Download ==
 Diaporamas data and media files can be downloaded. By this way, diaporamas can be automatically updated. At this moment, only HTTP download is supported, but other protocols may be added.
 
-= Cache =
+== Cache ==
 DiaporamaCenter uses a cache (also called repository) to store generated slides, downloaded media files. By using a cache, DiaporamaCenter can be used offline.
 
-= Scheduler =
+== Scheduler ==
