--- a/wiki/Overview.wiki
+++ b/wiki/Overview.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 == Display devices ==
 DiaporamaCenter is a multi display application. It manages the displays in an independent way :
 - it is able to play & stop one different slide show on each display
